<resources>
    <string name="app_name">Contacts</string>
    <string name="dialog_confirm">Usuń</string>
    <string name="dialog_cancel">Wróć</string>
    <string name="delete_question">Usunąć ten kontakt?</string>
    <string name="nameedit">Imię</string>
    <string name="surnameedit">Nazwisko</string>
    <string name="numberedit">Numer telefonu</string>
    <string name="dateedit">Data Urodzin</string>
    <string name="save">Zapisz</string>
    <string name="retray_msg">Powtórz</string>
    <string name="delete_cancel_msg">Wstrzymano usunięcie</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prefs">prefs</string>
    <string name="text">text</string>
    <string name="json">json</string>
</resources>
