<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItem">

    <EditText
        android:id="@+id/editText"
        android:layout_width="200dp"
        android:layout_height="39dp"
        android:layout_margin="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/nameedit"
        android:inputType=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="200dp"
        android:layout_height="39dp"
        android:layout_margin="32dp"
        android:autofillHints=""
        android:hint="@string/surnameedit"
        android:inputType=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="200dp"
        android:layout_height="39dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/dateedit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="200dp"
        android:layout_height="39dp"
        android:layout_margin="32dp"
        android:autofillHints=""
        android:hint="@string/numberedit"
        android:inputType="numberSigned"
        android:maxLength="9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        tools:targetApi="o" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Save"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        app:layout_constraintVertical_bias="0.175" />



</android.support.constraint.ConstraintLayout>